--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,15 +7,22 @@
 
 <body>
 
-    <h1>My Awesome App</h1>
+    <h1>Welcome to Our Site</h1>
   
     <% if (user) { %>
       <p><%= message %></p>
-      <a href="<%= membersLink %>">Members Only Area</a> | <a href="<%= logoutLink %>">Sign Out</a>
+      <p>
+        <a href="<%= membersLink %>">Go to Members Area</a> |
+        <a href="<%= logoutLink %>">Log Out</a>
+      </p>
     <% } else { %>
-      <p>Welcome! Please <a href="<%= signupLink %>">Sign Up</a> or <a href="<%= loginLink %>">Log In</a></p>
+      <p><%= message %></p>
+      <p>
+        <a href="<%= signupLink %>">Sign Up</a> |
+        <a href="<%= loginLink %>">Log In</a>
+      </p>
     <% } %>
   
-  </body>
+</body>
 
 </html>
